Aprilia.html has been modified in the PRMDH branch

--- a/Aprilia.html
+++ b/Aprilia.html
@@ -6,3 +6,8 @@
 Revolutionary and sophisticated, the RS 457 oozes elegance and aggression through clear racing elements such as the front double fairing and 2-in-1 exhaust. The distinctive livery options celebrate the bold essence of the Racing Squad, with the pairing of bright hues and refined materials delivering an experience that transmits speed and prestige.
 
 Are you ready to get in the mood?</p>
+
+<p>RS 457 Explained
+On the hunt for secrets about the newest member of the Racing Squad, with Tommy Marcon and the Aprilia boys.
+
+Tommaso Marcon, Aprilia Racing test rider, Moto2 rider and YouTuber, shows us around the 457. Grab your popcorn and enjoy a foray into the Aprilia factory, or flick through the pages to discover which particular features of the RS 457 really get the adrenalin coursing through your veins.</p>
